# virtual-tiff

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  01_faster_loading_3.0.ipynb  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.dvc/: config
.github/workflows/: release.yml  test.yml
demos/: 01_faster_loading_3.0.ipynb
docs/: index.md
docs/api/: parser.md
docs/design/: fill-values.md
scripts/: download_test_data.py  github_sources.json  sync_external_tiffs.py  sync_gdal_tiffs.py  sync_geotiff_test_data.py  upload_test_data.py
src/virtual_tiff/: __init__.py  codecs.py  constants.py  imagecodecs.py  parser.py  reader.py  utils.py
tests/: conftest.py  dvc.dvc  test_codecs.py  test_fill_value_coder.py  test_gcs.py  test_gdal_examples.py  test_http.py  test_http_earthaccess.py  test_https.py  test_multiband_s3.py  test_s3.py  test_version.py  test_virtual_tiff.py
