[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "virtual_tiff"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "obstore",
    "async_tiff",
    "virtualizarr @ git+https://github.com/zarr-developers/VirtualiZarr",
    "imagecodecs",
    "imagecodecs-numcodecs",
    "zarr @ git+https://github.com/zarr-developers/zarr-python",
]

# Dependency sets under dependencies-groups are NOT available via PyPI
[dependency-groups]
dev = [
  "codecov",
  "netcdf4",
  "mypy",
  "pandas-stubs",
  "pooch",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mypy",
  "pytest-xdist",
  "ruff",
  "s3fs",
  "earthaccess",
  "xarray",
  "dvc[s3]>=3.59.1",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

# Add the editable project pip install to the default group
[tool.pixi.pypi-dependencies]
virtual_tiff = { path = ".", editable = true }

# Define a feature set for Python 3.11
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

# Define a feature set for Python 3.12
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

# Define a feature set for Python 3.12
[tool.pixi.feature.test.dependencies]
rioxarray = "*"
rasterio = "*"

# Define commands to run within the test environments
[tool.pixi.feature.test.tasks]
run-mypy = { cmd = "mypy src" }
run-tests = { cmd = "pytest --verbose --durations=10" }
run-tests-cov = { cmd = "pytest --verbose --cov=src --cov=term-missing" }
run-tests-xml-cov = { cmd = "pytest --verbose --cov=src --cov-report=xml" }
run-tests-html-cov = { cmd = "pytest --verbose --cov=src --cov-report=html" }
download-test-images = { cmd = "dvc pull" }

# Define which features and groups to include in different pixi (similar to conda) environments)
[tool.pixi.environments]
test = ["dev", "test"]
test-py311 = ["dev", "test", "py311"] # test against python 3.11
test-py312 = ["dev", "test","py312"] # test against python 3.12

[tool.coverage.run]
source_pkgs = [""]
branch = true
parallel = true
omit = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/virtual_tiff",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points."zarr.codecs"]
"imagecodecs_deflate" = "virtual_tiff.imagecodecs:DeflateCodec"
"imagecodecs_delta" = "virtual_tiff.imagecodecs:DeltaCodec"
"imagecodecs_floatpred" = "virtual_tiff.imagecodecs:FloatPredCodec"
"imagecodecs_jetraw" = "virtual_tiff.imagecodecs:JetRawCodec"
"imagecodecs_jpeg" = "virtual_tiff.imagecodecs:JpegCodec"
"imagecodecs_jpeg8" = "virtual_tiff.imagecodecs:Jpeg8Codec"
"imagecodecs_jpeg2k" = "virtual_tiff.imagecodecs:Jpeg2KCodec"
"imagecodecs_jpegxl" = "virtual_tiff.imagecodecs:JpegXLCodec"
"imagecodecs_jpegxr" = "virtual_tiff.imagecodecs:JpegXRCodec"
"imagecodecs_lerc" = "virtual_tiff.imagecodecs:LercCodec"
"imagecodecs_lzw" = "virtual_tiff.imagecodecs:LZWCodec"
"imagecodecs_packbits" = "virtual_tiff.imagecodecs:PackBitsCodec"
"imagecodecs_png" = "virtual_tiff.imagecodecs:PngCodec"
"imagecodecs_webp" = "virtual_tiff.imagecodecs:WebpCodec"
"imagecodecs_zstd" = "virtual_tiff.imagecodecs:ZstdCodec"
"virtual_tiff.ChunkyCodec" = "virtual_tiff.codecs:ChunkyCodec"
"virtual_tiff.DeltaCodec" = "virtual_tiff.codecs:DeltaCodec"

[tool.codespell]
skip = 'pixi.lock'
